Update birthday message in index.html

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hey you 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
-                    <span class="say">May God bless you 🍀</span><br>
-                    <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">Just saying... you're pretty awesome ❤️</span><br>
-                    <span class="say">Sending good vibes and maybe a wink 😏</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
+                    <span class="say">Para mi persona favorita 💞</span><br>
+                    <span class="say">Más que una amiga... 🤞</span><br>
+                    <span class="say">Mi hermanita 👯‍♀️</span><br>
+                    <span class="say">Ya eres un regalo 🎁</span><br>
+                    <span class="say">Pero te mereces el mundo entero 🌍</span><br>
+                    <span class="say">Nunca cambies 💖</span><br>
+                    <span class="say">¡Te quiero muchísimo! ❤️</span><br>
+					<span class="say">¡Feliz Cumpleaños! 🎂</span><br>
                 </div>
             </div>
             <div id="clock-box">
@@ -180,4 +181,5 @@
     })();
     </script>
 </body>
+
 </html>
