una actualizacion potente

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>HBD love</title>	    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scaleble=no">
+    <title>HBD Solenny</title>	    
     <link type="text/css" rel="stylesheet" href="file/default.css">
     <script type="text/javascript" src="file/jquery.min.js"></script>
     <script type="text/javascript" src="file/jscex.min.js"></script>
@@ -35,9 +36,13 @@
                     <span class="say">Mi hermanita 👯‍♀️</span><br>
                     <span class="say">Ya eres un regalo 🎁</span><br>
                     <span class="say">Pero te mereces el mundo entero 🌍</span><br>
-                    <span class="say">Nunca cambies 💖</span><br>
-                    <span class="say">¡Te quiero muchísimo! ❤️</span><br>
-					<span class="say">¡Feliz Cumpleaños! 🎂</span><br>
+                    <span class="say">Que este nuevo año... 🌟</span><br>
+                    <span class="say">venga lleno de bendiciones. 🍀</span><br>
+                    <span class="say">Eres una persona increíble,</span><br>
+                    <span class="say">y estoy feliz de celebrar contigo. ✨</span><br>
+                    <span class="say">Nunca dejes de brillar 💖</span><br>
+                    <span class="say">Te quiero muchísimo ❤️</span><br>
+					<span class="say"></span>Atentamente, Yo 😊<br>
                 </div>
             </div>
             <div id="clock-box">
